# geant4_course_TSU_2026

./: .gitignore  README.md
DAY-1/: Practice-1.md
DAY-1/myproject/: CMakeLists.txt
DAY-2/: Practice-2.md
DAY-2/myproject/: myproject.cc  vis.mac
DAY-2/myproject/include/: MyPrimaryGeneratorAction.hh
DAY-2/myproject/src/: MyActionInitialization.cc
DAY-3/: Practice-3.md
DAY-3/myproject/: log.txt
DAY-3/myproject/include/: MyActionInitialization.hh  MyDetectorConstruction.hh  MyPrimaryGeneratorAction.hh  MyRun.hh  MyRunAction.hh
DAY-3/myproject/src/: MyDetectorConstruction.cc  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyRun.cc  MyRunAction.cc  MySteppingAction.cc
DAY-4/: Practice-4.md
DAY-4/experiment/: Hist_Edep.txt  plot.py
DAY-4/myproject/: experiment.mac  myproject.cc  run.mac
DAY-4/myproject/include/: Hist.hh  MyDetectorConstruction.hh  MyDetectorMessenger.hh  MyEventAction.hh  MySteppingAction.hh
DAY-4/myproject/src/: Hist.cc  MyActionInitialization.cc  MyDetectorConstruction.cc  MyDetectorMessenger.cc  MyRun.cc
